--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,3 +4,7 @@ $tablet: 991px;
 $mid-tablet: 900px;
 $desktop: 1200px;
 $large-desktop: 1400px;
+
+//Colors
+
+$secondary_color: rgba(241, 241, 241, 0.737);
