--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,3 +1,7 @@
+.header {
+  border-bottom: 1px solid rgb(225, 219, 219);
+}
+
 .header-logo {
   text-align: center;
   width: 200px;
@@ -43,13 +47,13 @@
 }
 
 .ant-input-affix-wrapper {
-  background-color: rgba(241, 241, 241, 0.737);
+  background-color: $secondary_color;
   border: 0px;
 }
 
 .ant-input-search-button {
   color: initial !important;
-  background-color: rgba(241, 241, 241, 0.737);
+  background-color: $secondary_color;
   border-start-end-radius: 0px !important ;
   border-end-end-radius: 0px !important;
   height: 30px !important;
