--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -2,18 +2,26 @@
   line-height: 2px;
   padding: 10px 0px;
   cursor: pointer;
+  margin: 0px;
   &:hover {
     font-size: 15px;
   }
 }
 
 .ant-layout-sider-children {
-  padding: 20px 0px !important;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
   height: fit-content !important;
   margin-left: 110px;
   text-align: left;
+  padding-top: 20px !important;
 }
 .ant-layout-sider {
+  position: -webkit-sticky !important;
+  position: fixed !important;
+  top: 70px;
+  z-index: 1000;
   height: fit-content;
 }
 
