--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,3 +12,10 @@
 .ant-layout {
   background-color: white;
 }
+
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left !important;
+}
